# libbare

./: .gitignore  Cargo.toml  Design.md  README.md  build.rs
example/amd64_minimal/: Cargo.toml
example/amd64_minimal/src/: main.rs
include/: README.md  libbare.h  libbare_generated.h
include/linux/: init.h  printk.h
linux-headers/scripts/: applyPatches.sh  edit.sh  rebuildPatches.sh
linux-headers/upstream-Patches/: 0001-add-readme.patch
src/: lib.rs  utils.rs
src/driver/gui/: mod.rs  vga_buffer.rs
src/linux/: mod.rs  printk.rs
src/service/: mod.rs
