[package]
name = "libbare"
version = "0.0.0"
edition = "2018"
authors = ["ㄗㄠˋ ㄑㄧˊ <tsao-chi@the-lingo.org>"]
repository = "https://github.com/Otcoy/libbare"
description = "libbare: statically linkable and dynamically loadable drivers"
license = "MPL-2.0"
categories = [ "no-std" ]

[profile.dev]
panic = "abort"

[dependencies]
#no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
no-std-compat = { branch = "A", git = "https://gitlab.com/tsao-chi/no-std-compat", features = [ "compat_hash", "compact_cstr", "compact_osraw" ] }
lazy_static = "1.4.0"
spin = "0.9.0"
x86_64 = { version = "0.14.3", optional = true } # amd64 only
vga = { version = "0.2.7", optional = true } # amd64 only

[features]
alloc = ["no-std-compat/alloc"]
default = []
#default = [ "std" ] # Default to using the std
std = [ "no-std-compat/std" ]
arch_amd64 = ["x86_64", "vga"]
unstable = [ "no-std-compat/unstable" ]
